--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -25,7 +25,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login to your account"
+        android:text="Change Password"
         android:textSize="30dp"
         android:textStyle="bold"
         android:textColor="@color/btn_login"
@@ -37,12 +37,12 @@
         app:layout_constraintVertical_bias="0.389" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/email"
         android:layout_width="249dp"
         android:layout_height="48dp"
         android:background="@drawable/edit_txt_design"
         android:gravity="center"
-        android:hint="Enter Email"
+        android:hint="Email"
         android:textColorHint="@color/hint_clr"
         android:textSize="25dp"
         android:textColor="@color/btn_login"
@@ -54,63 +54,51 @@
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/new_password"
         android:layout_width="251dp"
         android:layout_height="53dp"
         android:background="@drawable/edit_txt_design"
         android:gravity="center"
-        android:hint="Enter Password"
+        android:hint="New Password"
         android:textColorHint="@color/hint_clr"
-        android:textSize="25dp"
         android:textColor="@color/btn_login"
+        android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.582" />
+        app:layout_constraintTop_toBottomOf="@+id/email"
+        app:layout_constraintVertical_bias="0.05"/>
+
+    <EditText
+        android:id="@+id/confirm_password"
+        android:layout_width="251dp"
+        android:layout_height="53dp"
+        android:background="@drawable/edit_txt_design"
+        android:gravity="center"
+        android:hint="Confirm Password"
+        android:textColorHint="@color/hint_clr"
+        android:textColor="@color/btn_login"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_password"
+        app:layout_constraintVertical_bias="0.05"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/login"
-        android:layout_width="200dp"
+        android:id="@+id/cp"
+        android:layout_width="275dp"
         android:layout_height="wrap_content"
         android:background="@drawable/loginbutton"
-        android:text="Login"
-        android:textColor="@color/white"
+        android:text="Change Password"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
         app:layout_constraintVertical_bias="0.1"/>
-
-    <TextView
-        android:id="@+id/fp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password?"
-        android:textColor="@color/btn_login"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.828"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.73"
-        tools:ignore="MissingConstraints" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/admin"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:text="Admin"
-        android:textColor="@color/white"
-        android:background="@drawable/loginbutton"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintVertical_bias="0.850"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
