--- a/app/src/main/res/layout/activity_admin_deshboard.xml
+++ b/app/src/main/res/layout/activity_admin_deshboard.xml
@@ -9,7 +9,7 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
     android:background="@color/background"
-    tools:context=".Dashboard">
+    tools:context=".admin_dashboard">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,9 +21,7 @@
             android:layout_height="56dp"
             android:id="@+id/toolbar"
             android:background="#FFFFFF"
-            android:textAlignment="textStart">
-
-        </androidx.appcompat.widget.Toolbar>
+            android:textAlignment="textStart"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -39,8 +37,7 @@
         android:layout_gravity="start"
         android:background="#182932"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/menu"
-        app:itemIconTint="@color/white"
+        app:menu="@menu/admin_menu"
         app:itemBackground="@drawable/menu_item_bg"
         app:itemTextColor="@color/white" />
 
