--- a/app/src/main/res/layout/fragment_admin_see_salary.xml
+++ b/app/src/main/res/layout/fragment_admin_see_salary.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".salaryslip">
+    tools:context=".admin_see_salary">
 
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
