--- a/app/src/main/res/layout/fragment_admin_see_task.xml
+++ b/app/src/main/res/layout/fragment_admin_see_task.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".salaryslip">
+    tools:context=".admin_see_task">
 
     <androidx.cardview.widget.CardView
         android:layout_width="350dp"
@@ -39,31 +39,11 @@
                         style="@style/txt_tbl_heading"/>
 
                     <TextView
-                        android:text="Start Date"
+                        android:text="Task descripltion"
                         style="@style/txt_tbl_heading"/>
 
                     <TextView
-                        android:text="End Date"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Basic Pay"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Allowance"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Deduction"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Adjustment"
-                        style="@style/txt_tbl_heading"/>
-
-                    <TextView
-                        android:text="Total Amount"
+                        android:text="End by"
                         style="@style/txt_tbl_heading"/>
 
                     <TextView
@@ -84,39 +64,19 @@
                         style="@style/txt_tbl_ans"/>
 
                     <TextView
-                        android:text="21AFPL101"
+                        android:text="EMP101"
                         style="@style/txt_tbl_ans"/>
 
                     <TextView
-                        android:text="01 January-2024"
+                        android:text="Documentation complete"
                         style="@style/txt_tbl_ans"/>
 
                     <TextView
-                        android:text="31 January-2024"
+                        android:text="02 January 2024"
                         style="@style/txt_tbl_ans"/>
 
                     <TextView
-                        android:text="₹ 12000"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 400"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 200"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 100"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 12700"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="Paid"
+                        android:text="Done"
                         android:textColor="#5ED663"
                         style="@style/txt_tbl_ans"/>
 
@@ -129,40 +89,20 @@
                         style="@style/txt_tbl_ans"/>
 
                     <TextView
-                        android:text="21AFPL101"
+                        android:text="EMP105"
                         style="@style/txt_tbl_ans"/>
 
                     <TextView
-                        android:text="01 February-2024"
+                        android:text="Module 1 complete"
                         style="@style/txt_tbl_ans"/>
 
                     <TextView
-                        android:text="29 February-2024"
+                        android:text="05 January 2024"
                         style="@style/txt_tbl_ans"/>
 
                     <TextView
-                        android:text="₹ 12000"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 400"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 200"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 100"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="₹ 12700"
-                        style="@style/txt_tbl_ans"/>
-
-                    <TextView
-                        android:text="Paid"
-                        android:textColor="#5ED663"
+                        android:text="Panding"
+                        android:textColor="#C8F35D57"
                         style="@style/txt_tbl_ans"/>
 
                 </TableRow>
