--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -38,10 +38,21 @@
     <style name="edit_text">
         <item name="android:textSize">18dp</item>
         <item name="android:textColor">@color/blue</item>
+        <item name="android:textColorHint">@color/hint_clr</item>
         <item name="android:gravity">start</item>
         <item name="android:padding">10sp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="spinner">
+        <item name="android:textSize">18dp</item>
+        <item name="android:textColor">@color/blue</item>
+        <item name="android:textColorHint">@color/hint_clr</item>
+        <item name="android:gravity">start</item>
+        <item name="android:padding">10sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">45dp</item>
     </style>
 
 </resources>
